--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1496,6 +1496,16 @@
   timestamp = {2020.03.17},
 }
 
+@Book{Aronson2010,
+  title     = {The 21st-Century Screenplay},
+  publisher = {Allen \& Unwin},
+  year      = {2010},
+  author    = {Aronson, L.},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+  url       = {https://www.allenandunwin.com/browse/books/general-books/writing-language/21st-Century-Screenplay-Linda-Aronson-9781742371368},
+}
+
 @Book{Arquilla1996,
   title     = {The Advent of Netwar},
   publisher = {Rand},
@@ -2462,6 +2472,19 @@
   url       = {https://www.panmacmillan.com/authors/jonathan-bate/the-genius-of-shakespeare/9781509822546},
 }
 
+@Article{Bateman2013,
+  author    = {Bateman, J. A. and Tseng, C.},
+  title     = {The establishment of interpretative expectations in film},
+  journal   = {Review of Cognitive Linguistics},
+  year      = {2013},
+  volume    = {11},
+  number    = {2},
+  pages     = {353-368},
+  doi       = {10.1075/rcl.11.2.09bat},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+}
+
 @Article{Bavelas1948,
   author    = {Bavelas, A.},
   title     = {A Mathematical Model for Group Structures},
@@ -2978,6 +3001,17 @@
   doi       = {10.1007/978-3-642-20227-8_11},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@InProceedings{Besnier2020,
+  author    = {Besnier, C.},
+  title     = {History to Myths: Social Network Analysis for Comparison of Stories over Time},
+  booktitle = {4th Joint SIGHUM Workshop on Computational Linguistics for Cultural Heritage, Social Sciences, Humanities and Literature},
+  year      = {2020},
+  pages     = {1-9},
+  owner     = {Vincent},
+  timestamp = {2020.12.05},
+  url       = {https://www.aclweb.org/anthology/2020.latechclfl-1.1},
 }
 
 @InProceedings{Bethard2004,
@@ -4618,6 +4652,19 @@
   url       = {https://books.google.fr/books/about/Who_s_who_in_the_New_Testament.html?id=1IVu-JIwa-YC},
 }
 
+@Article{Bruner1991,
+  author    = {Bruner, J.},
+  title     = {The Narrative Construction of Reality},
+  journal   = {Critical Inquiry},
+  year      = {1991},
+  volume    = {18},
+  number    = {1},
+  pages     = {1-21},
+  doi       = {10.1086/448619},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+}
+
 @Book{Bryant2009,
   title     = {Media Effects: Advances in Theory and Research},
   publisher = {Routledge},
@@ -5003,6 +5050,19 @@
   owner     = {Vincent},
   timestamp = {2019.03.31},
   url       = {https://sta.rl.talis.com/items/C126874B-DD6C-DD7D-E6E3-5B4233D29BB2.html},
+}
+
+@Article{Butts2008,
+  author    = {Butts, C. T.},
+  title     = {A Relational Event Framework for Social Action},
+  journal   = {Sociological Methodology},
+  year      = {2008},
+  volume    = {38},
+  number    = {1},
+  pages     = {155-200},
+  doi       = {10.1111/j.1467-9531.2008.00203.x},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
 }
 
 @Book{Byock1982,
@@ -6701,6 +6761,19 @@
   url       = {https://www.routledge.com/Whos-Who-in-the-Old-Testament-2nd-Edition/Comay/p/book/9780415260312},
 }
 
+@Article{Conaldi2012,
+  author    = {Conaldi, G. and Lomi, A. and Tonellato, M.},
+  title     = {Dynamic Models of Affiliation and the Network Structure of Problem Solving in an Open Source Software Project},
+  journal   = {Organizational Research Methods},
+  year      = {2012},
+  volume    = {15},
+  number    = {3},
+  pages     = {385-412},
+  doi       = {10.1177/1094428111430541},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+}
+
 @InProceedings{Condello2014,
   author    = {Condello, M. and Harrison, R. and Isasi, J. and Kinnaman, A. and Kumari , A.},
   title     = {A Methodology for Character Networks at the Macroanalytical Level},
@@ -6758,6 +6831,19 @@
   owner     = {Vincent},
   timestamp = {2019.08.21},
   url       = {https://broadviewpress.com/product/the-broadview-anthology-of-restoration-and-early-eighteenth-century-drama/?ph=95bf68a5569261c0022b0608},
+}
+
+@Article{Connelly1990,
+  author    = {Connelly, F. M. and Clandinin, D. J.},
+  title     = {Stories of Experience and Narrative Inquiry},
+  journal   = {Educational Researcher},
+  year      = {1990},
+  volume    = {19},
+  number    = {5},
+  pages     = {2-14},
+  doi       = {10.3102/0013189x019005002},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
 }
 
 @Book{Connolly2000,
@@ -8552,6 +8638,18 @@
   timestamp = {2019.03.22},
 }
 
+@Article{Dubba2015,
+  author    = {Dubba, K. S. R. and Cohn, A. G. and Hogg, D. C. and Bhatt, M. and Dylla, F.},
+  title     = {Learning Relational Event Models from Video},
+  journal   = {Journal of Artificial Intelligence Research},
+  year      = {2015},
+  volume    = {53},
+  pages     = {41-90},
+  doi       = {10.1613/jair.4395},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+}
+
 @Article{Dubini1991,
   author    = {Dubini, P. and Aldrich, H.},
   title     = {Personal and extended networks are central to the entrepreneurial process},
@@ -8575,6 +8673,19 @@
   doi       = {10.1353/ort.2011.0029},
   owner     = {Vincent},
   timestamp = {2019.04.06},
+}
+
+@Article{DuBois2013,
+  author    = {DuBois, C. and Butts, C. T. and McFarland, D. and Smyth, P.},
+  title     = {Hierarchical models for relational event sequences},
+  journal   = {Journal of Mathematical Psychology},
+  year      = {2013},
+  volume    = {57},
+  number    = {6},
+  pages     = {297-309},
+  doi       = {10.1016/j.jmp.2013.04.001},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
 }
 
 @Article{Duch2005,
@@ -9197,6 +9308,32 @@
   doi       = {10.2307/1251831},
   owner     = {Vincent},
   timestamp = {2020.11.30},
+}
+
+@Article{Eliashberg2007,
+  author    = {Eliashberg, J. and Hui, S. K. and Zhang, Z. J.},
+  title     = {From Story Line to Box Office: A New Approach for Green-Lighting Movie Scripts},
+  journal   = {Management Science},
+  year      = {2007},
+  volume    = {53},
+  number    = {6},
+  pages     = {881-893},
+  doi       = {10.1287/mnsc.1060.0668},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+}
+
+@Article{Eliashberg2014,
+  author    = {Eliashberg, J. and Hui, S. K. and Zhang, Z. J.},
+  title     = {Assessing Box Office Performance Using Movie Scripts: A Kernel-Based Approach},
+  journal   = {IEEE Transactions on Knowledge and Data Engineering},
+  year      = {2014},
+  volume    = {26},
+  number    = {11},
+  pages     = {2639-2648},
+  doi       = {10.1109/tkde.2014.2306681},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
 }
 
 @InCollection{Eliot1998,
@@ -13216,6 +13353,19 @@
   timestamp = {2020.12.01},
 }
 
+@Article{Hartigan1979,
+  author    = {Hartigan, J. A. and Wong, M. A.},
+  title     = {Algorithm AS 136: A K-Means Clustering Algorithm},
+  journal   = {Applied Statistics},
+  year      = {1979},
+  volume    = {28},
+  number    = {1},
+  pages     = {100},
+  doi       = {10.2307/2346830},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+}
+
 @InProceedings{Hasan2013,
   author    = {Hasan, K. S. and Ng, V.},
   title     = {Extralinguistic constraints on stance recognition in ideological debates},
@@ -13640,6 +13790,18 @@
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://www.press.uchicago.edu/ucp/books/book/distributed/S/bo15475096.html},
+}
+
+@Article{HennigThurau2007,
+  author    = {Hennig-Thurau, T. and Houston, M. B. and Walsh, G.},
+  title     = {Determinants of motion picture box office and profitability: an interrelationship approach},
+  journal   = {Review of Managerial Science},
+  year      = {2007},
+  volume    = {1},
+  pages     = {65-92},
+  doi       = {10.1007/s11846-007-0003-9},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
 }
 
 @Article{Henriques2013,
@@ -14217,6 +14379,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1017/S0028688500014247},
   owner     = {Vincent},
   timestamp = {2019.06.24},
+}
+
+@Book{Horton1999,
+  title     = {Writing the Character-Centered Screenplay},
+  publisher = {University of California Press},
+  year      = {1999},
+  author    = {Horton, A.},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+  url       = {https://www.ucpress.edu/book/9780520221659/writing-the-character-centered-screenplay-updated-and-expanded-edition},
 }
 
 @Article{Hou2012,
@@ -17814,6 +17986,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.25},
 }
 
+@Book{Lawson1936,
+  title     = {Theory and Technique of Playwriting and Screenwriting},
+  publisher = {Hill and Wang},
+  year      = {1936},
+  author    = {Lawson, J. H.},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+  url       = {https://www.forgottenbooks.com/en/download/TheoryandTechniqueofPlaywriting_10858557.pdf},
+}
+
 @Article{Layton1986,
   author    = {Layton, R.},
   title     = {Political and Territorial Structures Among Hunter-Gatherers},
@@ -20664,6 +20846,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://catalogue.nla.gov.au/Record/1421236},
 }
 
+@Book{Martin1986,
+  title     = {Recent Theories of Narrative},
+  publisher = {Cornell University Press},
+  year      = {1986},
+  author    = {Martin, W.},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+  url       = {https://www.cornellpress.cornell.edu/book/9780801417719/recent-theories-of-narrative/#bookTabs=1},
+}
+
 @Article{Martin2014,
   author    = {Martin, T. and Zhang, X. and Newman, M. E. J.},
   title     = {Localization and centrality in networks},
@@ -20818,6 +21010,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2018.06.15},
   url       = {https://arxiv.org/abs/1512.00728},
+}
+
+@Article{Massey2016,
+  author    = {Massey, S. E.},
+  title     = {Social network analysis of the biblical Moses},
+  journal   = {Applied Network Science},
+  year      = {2016},
+  volume    = {1},
+  pages     = {13},
+  doi       = {10.1007/s41109-016-0012-1},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
 }
 
 @Article{Masucci2006,
@@ -21250,6 +21454,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://mckeestory.com/books/dialogue/},
 }
 
+@Article{McKenzie2010,
+  author    = {McKenzie, J.},
+  title     = {The economics of movies: a literature survey},
+  journal   = {Journal of Economic Surveys},
+  year      = {2010},
+  volume    = {26},
+  number    = {1},
+  pages     = {42-70},
+  doi       = {10.1111/j.1467-6419.2010.00626.x},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+}
+
 @PhdThesis{McKinnon2010,
   author    = {McKinnon, J. S.},
   title     = {The dramaturgy appropriation: how Canadian Playwrights use and abuse Shakespeare and Chekhov},
@@ -21387,6 +21604,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://gallica.bnf.fr/ark:/12148/bpt6k934150p.image},
+}
+
+@InProceedings{Mellace2020,
+  author    = {Mellace, S. and Vani, K. and Antonucci, A.},
+  title     = {Relation Clustering in Narrative Knowledge Graphs},
+  booktitle = {AI4Narratives Workshop / 29th International Joint Conference on Artificial Intelligence \& 17th Pacific Rim International Conference on Artificial Intelligence},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2020.12.05},
+  url       = {https://arxiv.org/abs/2011.13647},
 }
 
 @Article{Meltzoff1990,
@@ -22685,6 +22912,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.23},
   url       = {https://dh2017.adho.org/abstracts/352/352.pdf},
+}
+
+@Article{Murtagh2009,
+  author    = {Murtagh, F. and Ganz, A. and McKie, S.},
+  title     = {The structure of narrative: The case of film scripts},
+  journal   = {Pattern Recognition},
+  year      = {2009},
+  volume    = {42},
+  number    = {2},
+  pages     = {302-312},
+  doi       = {10.1016/j.patcog.2008.05.026},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
 }
 
 @InProceedings{Mutton2002,
@@ -24139,6 +24379,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1090/s0002-9939-1960-0117174-7},
   owner     = {Vincent},
   timestamp = {2019.08.19},
+}
+
+@Article{Orlandi2002,
+  author    = {Orlandi, T.},
+  title     = {Is Humanities computing a discipline?},
+  journal   = {Jahrbuch für Computerphilologie},
+  year      = {2002},
+  volume    = {4},
+  pages     = {51-58},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+  url       = {http://computerphilologie.uni-muenchen.de/jg02/orlandi.html},
 }
 
 @InProceedings{Orman2012,
@@ -25901,6 +26153,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.24},
   url       = {https://press.princeton.edu/books/paperback/9780691159744/inside-paradise-lost},
+}
+
+@Article{Quintane2014,
+  author    = {Quintane, E. and Conaldi, G. and Tonellato, M. and Lomi, A.},
+  title     = {Modeling Relational Events},
+  journal   = {Organizational Research Methods},
+  year      = {2014},
+  volume    = {17},
+  number    = {1},
+  pages     = {23-50},
+  doi       = {10.1177/1094428113517007},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
 }
 
 @Article{Raab2003,
@@ -29305,6 +29570,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2018.05.12},
 }
 
+@Article{Snijders2010,
+  author    = {Snijders, T. A. B. and van de Bunt, G. G. and Steglich, C. E. G.},
+  title     = {Introduction to stochastic actor-based models for network dynamics},
+  journal   = {Social Networks},
+  year      = {2010},
+  volume    = {32},
+  number    = {1},
+  pages     = {44-60},
+  doi       = {10.1016/j.socnet.2009.02.004},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+}
+
 @InProceedings{Snoek2005,
   author    = {Snoek, C. G. M. and Worring, M. and Smeulders, A. W. M.},
   title     = {Early versus late fusion in semantic video analysis},
@@ -29607,6 +29885,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2018.02.15},
   url       = {https://www.aaai.org/ocs/index.php/AAAI/AAAI16/paper/viewPaper/12173},
+}
+
+@Article{Stadtfeld2011,
+  author    = {Stadtfeld, C. and Geyer-Schulz, A.},
+  title     = {Analyzing event stream dynamics in two-mode networks: An exploratory analysis of private communication in a question and answer community},
+  journal   = {Social Networks},
+  year      = {2011},
+  volume    = {33},
+  number    = {4},
+  pages     = {258-272},
+  doi       = {10.1016/j.socnet.2011.07.004},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
 }
 
 @InCollection{Stafford1991,
@@ -30352,6 +30643,30 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2015.07.07},
 }
 
+@Article{Szilas2007,
+  author    = {Szilas, N.},
+  title     = {A computational model of an intelligent narrator for interactive narratives},
+  journal   = {Applied Artificial Intelligence},
+  year      = {2007},
+  volume    = {21},
+  number    = {8},
+  pages     = {753-801},
+  doi       = {10.1080/08839510701526574},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+}
+
+@Article{Szilas2016,
+  author    = {Szilas, N.},
+  title     = {Modeling and Representing Dramatic Situations as Paradoxical Structures},
+  journal   = {Digital Scholarship in the Humanities},
+  year      = {2016},
+  pages     = {fqv071},
+  doi       = {10.1093/llc/fqv071},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+}
+
 @Article{Sznajd-Weron2005,
   author    = {Sznajd-Weron, K.},
   title     = {Sznajd Model And Its Applications},
@@ -30904,6 +31219,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-030-48244-2_37},
   owner     = {Vincent},
   timestamp = {2020.12.01},
+}
+
+@Book{Thompson1999,
+  title     = {Storytelling in the New Hollywood: Understanding Classical Narrative Technique},
+  publisher = {Harvard University Press},
+  year      = {1999},
+  author    = {Thompson, K.},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+  url       = {https://www.hup.harvard.edu/catalog.php?isbn=9780674839755},
 }
 
 @Book{Thompson2003,
@@ -31882,6 +32207,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.23},
 }
 
+@Book{Vany2004,
+  title     = {Hollywood Economics: How Extreme Uncertainty Shapes the Film Industry},
+  publisher = {Routledge},
+  year      = {2004},
+  author    = {De Vany, A. S.},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+  url       = {https://www.routledge.com/Hollywood-Economics-How-Extreme-Uncertainty-Shapes-the-Film-Industry/Vany/p/book/9780415312615},
+}
+
 @InProceedings{Vaswani2017,
   author    = {Vaswani, A. and Shazeer, N. and Parmar, N. and Uszkoreit, J. and Jones, L. and Gomez, A. N. and Kaiser, Ł. and Polosukhin, I.},
   title     = {Attention is All you Need},
@@ -32114,6 +32449,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books/about/Morphology_of_the_Folktale.html?id=3Md3u9UPgOEC&redir_esc=y},
 }
 
+@Book{Vogel2014,
+  title     = {Entertainment Industry Economics: A Guide for Financial Analysis},
+  publisher = {Cambridge University Press},
+  year      = {2014},
+  author    = {Vogel, H. L.},
+  doi       = {10.1017/cbo9781139871679},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+}
+
 @Book{Vogler1998,
   title     = {The Writer's Journey: Mythic Structure for Writers},
   publisher = {Michael Wiese Productions},
@@ -32228,6 +32573,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/taffc.2015.2507168},
   owner     = {Vincent},
   timestamp = {2020.03.15},
+}
+
+@Article{Vu2017,
+  author    = {Vu, D. and Lomi, A. and Mascia, D. and Pallotti, F.},
+  title     = {Relational event models for longitudinal network data with an application to interhospital patient transfers},
+  journal   = {Statistics in Medicine},
+  year      = {2017},
+  volume    = {36},
+  number    = {14},
+  pages     = {2265-2287},
+  doi       = {10.1002/sim.7247},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
 }
 
 @InProceedings{Vuillemot2009,
