--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -10247,6 +10247,19 @@
   timestamp = {2019.04.11},
 }
 
+@Article{Fichtner2004,
+  author    = {Fichtner, E. G.},
+  title     = {Sigfrid's merovingian origins},
+  journal   = {Monatshefte},
+  year      = {2004},
+  volume    = {96},
+  number    = {3},
+  pages     = {327-342},
+  owner     = {Vincent},
+  timestamp = {2020.12.14},
+  url       = {https://www.jstor.org/stable/30154171},
+}
+
 @Article{Fiedler1973,
   author    = {Fiedler, M.},
   title     = {Algebraic connectivity of graphs},
@@ -15312,6 +15325,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.04},
 }
 
+@InProceedings{Jia2020a,
+  author    = {Jia, Y. and Dou, H. and Cao, S. and Zan, H.},
+  title     = {Speaker Identification and Its Application to Social Network Construction for Chinese Novels},
+  booktitle = {International Conference on Asian Language Processing},
+  year      = {2020},
+  pages     = {13-18},
+  owner     = {Vincent},
+  timestamp = {2020.12.12},
+  url       = {http://www.colips.org/conferences/ialp2020/proceedings/papers/IALP2020_P46.pdf},
+}
+
 @InProceedings{Jiang2007,
   author    = {Jiang, H. and Fels, S. and Little, J. J.},
   title     = {A Linear Programming Approach for Multiple Object Tracking},
@@ -17112,6 +17136,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.12.31},
   url       = {https://www.worldcat.org/title/infidelity-essays-on-film-adaptation/oclc/183917129},
+}
+
+@Article{Kratz1962,
+  author    = {Kratz, H.},
+  title     = {The Proposed Sources of the ``Nibelungenlied''},
+  journal   = {Studies in Philology},
+  year      = {1962},
+  volume    = {59},
+  number    = {4},
+  pages     = {615-630},
+  owner     = {Vincent},
+  timestamp = {2020.12.14},
+  url       = {https://www.jstor.org/stable/4173396},
 }
 
 @Article{Krause2003,
@@ -28607,6 +28644,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.24},
 }
 
+@Article{Schuette1921,
+  author    = {Schütte, G.},
+  title     = {The Nibelungen Legend and Its Historical Basis},
+  journal   = {Journal of English and Germanic Philology},
+  year      = {1921},
+  volume    = {20},
+  number    = {3},
+  pages     = {291-327},
+  owner     = {Vincent},
+  timestamp = {2020.12.14},
+  url       = {https://www.jstor.org/stable/27702587},
+}
+
 @InProceedings{Schuhmacher2016,
   author    = {Schuhmacher, M. and Roth, B. and Paolo, S. Ponzetto and Dietz, L.},
   title     = {Finding Relevant Relations in Relevant Documents},
@@ -28619,6 +28669,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-319-30671-1_49},
   owner     = {Vincent},
   timestamp = {2020.03.15},
+}
+
+@InProceedings{Schult2008,
+  author    = {Schult, D. A.},
+  title     = {Exploring network structure, dynamics, and function using NetworkX},
+  booktitle = {7th Python in Science Conference},
+  year      = {2008},
+  groups    = {NetworkX},
+  owner     = {Vincent},
+  timestamp = {2020.12.14},
+  url       = {https://www.osti.gov/biblio/960616},
 }
 
 @Article{Schweinberger2011,
@@ -31251,6 +31312,44 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.vanhamel.nl/codecs/Thomson_(D._S.)_1952a},
 }
 
+@Article{Thorp1937,
+  author    = {Thorp, M.},
+  title     = {The Unity of the Nibelungenlied},
+  journal   = {Journal of English and Germanic Philology},
+  year      = {1937},
+  volume    = {36},
+  number    = {4},
+  pages     = {475-480},
+  owner     = {Vincent},
+  timestamp = {2020.12.14},
+  url       = {https://www.jstor.org/stable/27704306},
+}
+
+@Article{Thorp1938,
+  author    = {Thorp, M.},
+  title     = {The archetype of the nibelungen legend},
+  journal   = {Journal of English and Germanic Philology},
+  year      = {1938},
+  volume    = {37},
+  number    = {1},
+  pages     = {7-17},
+  owner     = {Vincent},
+  timestamp = {2020.12.14},
+  url       = {https://www.jstor.org/stable/27704349},
+}
+
+@Article{Thuillard2018,
+  author    = {Thuillard, M. and Le Quellec, J.-L. and d'Huy, J.},
+  title     = {Computational Approaches to Myths Analysis: Application to the Cosmic Hunt},
+  journal   = {Nouvelle Mythologie Comparée / New Comparative Mythology},
+  year      = {2018},
+  volume    = {4},
+  pages     = {123-154},
+  owner     = {Vincent},
+  timestamp = {2020.12.14},
+  url       = {https://halshs.archives-ouvertes.fr/halshs-02280068/},
+}
+
 @Article{Tian2015,
   author    = {Tian, H. and Lu, C. and Yang, J. and Banger, K. and Huntzinger, D. N. and Schwalm, C. R. and Michalak, A. M. and Cook, R. and Ciais, P. and Hayes, D. and Huang, M. and Ito, A. and Jain, A. K. and Lei, H. and Mao, J. and Pan, S. and Post, W. M. and Peng, S. and Poulter, B. and Ren, W. and Ricciuto, D. and Schaefer, K. and Shi, X. and Tao, B. and Wang, W. and Wei, Y. and Yang, Q. and Zhang, B. and Zeng, N.},
   title     = {Global patterns and controls of soil organic carbon dynamics as simulated by multiple terrestrial biosphere models: Current status and future directions},
@@ -33542,13 +33641,14 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 @Article{Wills2019,
   author    = {Wills, P. and Meyer, F. G.},
   title     = {Metrics for Graph Comparison: A Practitioner's Guide},
-  journal   = {arXiv},
-  year      = {2019},
-  volume    = {stat.AP},
-  pages     = {1904.07414},
+  journal   = {PLoS ONE},
+  year      = {2020},
+  volume    = {15},
+  number    = {2},
+  pages     = {e0228728},
+  doi       = {10.1371/journal.pone.0228728},
   owner     = {Vincent},
   timestamp = {2019.04.18},
-  url       = {https://arxiv.org/abs/1904.07414},
 }
 
 @Article{Wilson1927,
